feat: domain models, billing engine, use cases and Room persistence
core:domain (pure JVM): Money (minor units, HALF_EVEN), CurrencyCode with JDK
fraction digits, BillingCycle with a normalizing factory, anchor-based
BillingSchedule (nth-occurrence date math), Subscription/PriceChange/
PaymentRecord/UserPreferences models, repository contracts, and use cases for
add/update/delete/status, spend summary, upcoming payments, search/filter/sort,
billing rollover and hybrid spending history. 82 unit tests covering the
spec edge cases (Feb 29, 31st anchors, leap years, JPY/KWD, zero, overflow).

core:data: Room v1 (exported schema, cascade FKs, unique payment index),
DataStore preferences, repository implementations, Hilt bindings. 13
Robolectric tests against real SQLite, including a schema identity-hash guard.

Test fixtures (fakes, builders, fixed clocks) are shared via java-test-fixtures.