@@ -6,7 +6,9 @@ import org.gradle.api.Plugin
 import org.gradle.api.Project
 import org.gradle.kotlin.dsl.apply
 import org.gradle.kotlin.dsl.configure
+import org.gradle.api.tasks.testing.Test
 import org.gradle.kotlin.dsl.dependencies
+import org.gradle.kotlin.dsl.withType
 
 class AndroidLibraryConventionPlugin : Plugin<Project> {
     override fun apply(target: Project) {
@@ -26,6 +28,14 @@ class AndroidLibraryConventionPlugin : Plugin<Project> {
                     .distinct()
                     .joinToString(separator = "_")
                     .lowercase() + "_"
+            }
+
+            // Robolectric reaches into java.io internals that JDK 17+ seals by default.
+            tasks.withType<Test>().configureEach {
+                jvmArgs(
+                    "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                    "--add-exports", "java.base/jdk.internal.access=ALL-UNNAMED",
+                )
             }
 
             dependencies {
